deploy/connection-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connection-service
spec:
  selector:
    app.kubernetes.io/name: connection-service
  ports:
    - name: http
      port: 80
      targetPort: http
